Template Main/Landing Approve.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
         </div>
         <!-- End Header -->
 
-
+        <!-- Start Main/Landing -->
+        <div class="landing">
+            <div class="intro-text">
+                <h1>Hello and Welcome</h1>
+                <p>We are Ruggies and we are an amazing company with <span>awesome rugs.</span></p>
+            </div>
+        </div>
+        <!-- End Main/Landing -->
 
     </body>
 
