Finished Features and Approved.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
         </div>
         <!-- End Main/Landing -->
 
+        <!-- Start Features -->
+        <div class="features">
+            <div class="container">
+                <div class="feat">
+                    <i class="fas fa-magic fa-3x"></i>
+                    <h3>Our Idea is a Rug</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="feat">
+                    <i class="fas fa-magic fa-3x"></i>
+                    <h3>Rug is Our Idea</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="feat">
+                    <i class="fas fa-magic fa-3x"></i>
+                    <h3>All Ideas is a Rugs</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+        <!-- End Features -->
     </body>
 
 </html>
