Created the base for the services content columns.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,71 @@
             <div class="container">
                 <h2 class="special-heading">Services</h2>
                 <p>Don't be busy, be productive</p>
+                <div class="services-content">
+                    <!-- start service col 1 -->
+                    <div class="col">
+                        <!-- srv box 1 -->
+                        <div class="srv">
+                            <i class="fas fa-palette fa-2x"></i>
+                            <div class="text">
+                                <h3>
+                                    Rugs Design
+                                </h3>
+                                <p>
+                                    Rugs design is all about what the customer design is, it depends on the design the customer wants to be ruged in the rug.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- srv box 2 -->
+                        <div class="srv">
+                            <i class="fab fa-sketch fa-2x"></i>
+                            <div class="text">
+                                <h3>
+                                    UI & UX
+                                </h3>
+                                <p>
+                                    Rugs process is all about what the designer's design is, it depends on the design the designer's wants to be ruged in the rug.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end service col 1 -->
+                    <!-- start service col 2 -->
+                    <div class="col">
+                        <!-- srv box 3 -->
+                        <div class="srv">
+                            <i class="fas fa-vector-square fa-2x"></i>
+                            <div class="text">
+                                <h3>
+                                    Web Design
+                                </h3>
+                                <p>
+                                    Web design is all about what the developer design is, it depends on the design the developer wants to be ruged in the rug.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- srv box 4 -->
+                        <div class="srv">
+                            <i class="fas fa-pencil-ruler fa-2x"></i>
+                            <div class="text">
+                                <h3>
+                                    Web Development
+                                </h3>
+                                <p>
+                                    Web Development is all about what the designer's design is, it depends on the design the designer's wants to be ruged in the rug.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end service col 2 -->
+                    <!-- start service col 3 -->
+                    <div class="col">
+                        <div class="image">
+                            <img src="images/col3.jpg" alt="a photo">
+                        </div>
+                    </div>
+                    <!-- end service col 3 -->
+                </div>
             </div>
         </div>
         <!-- End Services -->
