Finished and completed the services section.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <!-- end service col 2 -->
                     <!-- start service col 3 -->
                     <div class="col">
-                        <div class="image">
+                        <div class="image image-colomn">
                             <img src="images/col3.jpg" alt="a photo">
                         </div>
                     </div>
