Finalizing Services section + adding assets.

--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
                 <div class="feat">
                     <i class="fas fa-magic fa-3x"></i>
                     <h3>Our Idea is a Rug</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>The soft wool rug felt cozy underfoot, she rolled up the rug and stored it carefully.</p>
                 </div>
                 <div class="feat">
                     <i class="fas fa-magic fa-3x"></i>
                     <h3>Rug is Our Idea</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>The colorful braided rug brightened up the room, the antique Oriental rug was worth a fortune.</p>
                 </div>
                 <div class="feat">
                     <i class="fas fa-magic fa-3x"></i>
                     <h3>All Ideas is a Rugs</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>The antique Oriental rug was worth a fortune, the colorful braided rug brightened up the room.</p>
                 </div>
             </div>
         </div>
         <!-- End Features -->
 
         <!-- Start Services -->
-        <div class="services">
+        <div class="services" id="services">
             <div class="container">
                 <h2 class="special-heading">Services</h2>
                 <p>Don't be busy, be productive</p>
@@ -152,6 +152,10 @@
             </div>
         </div>
         <!-- End Services -->
+
+        
+
+
 
     </body>
 
