Finished the Portfolio section.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,37 @@
         </div>
         <!-- End Services -->
 
-        
+        <!-- Start Portfolio -->
+        <div class="portfolio" id="portfolio">
+            <div class="container">
+                <h2 class="special-heading">Portfolio</h2>
+                <p>If you do it right, it will last for ever.</p>
+                <div class="portfolio-content">
+                    <div class="card">
+                        <img src="images/panda.jpg" alt="panda">
+                        <div class="info">
+                            <h3>Panda one is here</h3>
+                            <p>I am mr panda one, I will be here.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/panda.jpg" alt="panda">
+                        <div class="info">
+                            <h3>Panda two is here</h3>
+                            <p>I am mr panda two, I will be here.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/panda3.jpg" alt="panda">
+                        <div class="info">
+                            <h3>Panda three is here</h3>
+                            <p>I am mr panda three, I will be here.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Portfolio -->
 
 
 
