Finished the About section.

--- a/index.html
+++ b/index.html
@@ -185,6 +185,25 @@
         </div>
         <!-- End Portfolio -->
 
+        <!-- Start About -->
+        <div class="about" id="about">
+            <div class="container">
+                <h2 class="special-heading">About</h2>
+                <p>If you know us, you know us.</p>
+                <div class="about-content">
+                    <div class="image">
+                        <img src="images/about.jpg" alt="about">
+                    </div>
+                    <div class="text">
+                        <p>The intricate hand-knotted design of the wool rug added a beautiful and unique touch to the room, making it a cozy and inviting space to relax in.</p>
+                        <hr>
+                        <p>The vibrant colors and bold geometric patterns of the kilim rug added a playful and energetic vibe to the room, making it the perfect space for entertaining guests.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End About -->
+
 
 
     </body>
