--- a/index.html
+++ b/index.html
@@ -204,6 +204,33 @@
         </div>
         <!-- End About -->
 
+        <!-- Start Contact -->
+        <div class="contact" id="contact">
+            <div class="container">
+                <h2 class="special-heading">Contact</h2>
+                <p>If you wish to contact us, then, you contact us.</p>
+                <div class="info">
+                    <p class="label">Feel free to drop us a line at:</p>
+                    <a href="mailto:ruggies@gmail.com?subject=Contact" class="link">ruggies@gmail.com</a>
+                    <div class="social">
+                        Find Us On Social Networks
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Contact -->
+
+        <!-- Start Footer -->
+
+        <div class="footer">
+            &copy; 2023 <span>Ruggies</span> All Rights Reserved
+        </div>
+
+        <!-- End Footer -->
+
 
 
     </body>
